Se agrego los tokens y las rutas para los accesos

--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,22 @@
     background: url("./assets/images/Logo1.png");
     background-position: center;
     background-size: cover;
+    animation: fadeIn 2s ease-in-out infinite alternate; /* Puedes ajustar la duración y la función de temporización según tus preferencias */
   }
-  
+
   .p-dialog .p-dialog-titlebar-close {
     display: none;
   }
   @media (max-width: 767px) {
     .bg-login-image {
       display: none; /* Oculta la imagen en dispositivos móviles */
+    }
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
     }
   }
