--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 .container_detail_principal {
     display: flex;
     flex-direction: column;
